# piper

./: .gitignore  inspect_model_no_onnx.py  model_info.py  model_info_strict.py  test_piper_rtf.py
cpp_bench/: benchmark.cpp  en_US-lessac-high.onnx.json  piper.cpp  piper.h  piper_impl.hpp
piper-android/: GEMINI.md  PRIVACY.md  build.gradle  build_app.sh  build_jni.sh  dependencies.txt  dependencies_new.txt  gradle.properties  settings.gradle
piper-android/.github/workflows/: release.yml
piper-android/app/: build.gradle
piper-android/app/src/main/: AndroidManifest.xml
piper-android/app/src/main/assets/espeak-ng-data/: th_dict
piper-android/app/src/main/java/com/brahmadeo/piper/tts/: EbookLibraryActivity.kt  EbookOutlineActivity.kt  HistoryActivity.kt  LexiconActivity.kt  MainActivity.kt  PiperTTS.kt  PlaybackActivity.kt  QueueActivity.kt  SavedAudioActivity.kt  (+1 more)
piper-android/app/src/main/res/values/: strings.xml  themes.xml
piper-android/app/src/main/res/values-es/: strings.xml
piper-android/app/src/main/res/values-fr/: strings.xml
piper-android/app/src/main/res/values-ko/: strings.xml
piper-android/app/src/main/res/values-night/: themes.xml
piper-android/app/src/main/res/values-pt/: strings.xml
piper-android/app/src/main/res/xml/: tts_engine.xml
piper-android/fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
piper-android/metadata/: com.brahmadeo.piper.tts.yml
piper-android/rust/: Cargo.toml  README.md  build.rs
piper-android/rust/src/: helper.rs  lib.rs  piper.rs  thermal.rs
piper_src/: piper.cpp
(+28 files in other folders)
