[package]
name = "piper-tts"
version = "1.0.0-alpha1"
edition = "2021"

[dependencies]
# ONNX Runtime - Essential
ort = { version = "2.0.0-rc.11", features = ["load-dynamic", "ndarray"] }

# Array processing
ndarray = { version = "0.17.2", features = ["rayon"] }
rand = "0.10.1"
rand_distr = "0.6.0"
rayon = "1.12.0"
hound = "3.5.1"
once_cell = "1.21.4"

# JSON for Piper Config - Essential
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Text Processing - Essential for cleaning input
unicode-normalization = "0.1"
regex = "1.10"

# Android Integration - Essential
jni = "0.21"
android_logger = "0.13"
log = "0.4"
libc = "0.2"

[lib]
name = "piper_tts"
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"
